Configure Xmx and Xms for JVM