@@ -33,9 +33,10 @@ dependencies {
 
 docker {
     springBootApplication {
-        baseImage = "openjdk:11-jre-slim"
+        baseImage = "openjdk:11.0.14.1-jre"
         ports = [8080]
         images = ["subway_monitor:latest"]
+        jvmArgs = ["-XX:+UseContainerSupport", "-Xlog:gc", "-Xms256m", "-Xmx256m"]
     }
 }
 
